# efficient-route-planning-freiburg

./: .gitignore  Cargo.toml  README.md
data/: oneway-way.osm.xml  rutland-tiny.osm.xml
src/: dijkstra.rs  main.rs  network.rs  utils.rs
src/osm/: constants.rs  load_xml.rs  mod.rs
