[package]
name = "efficient-route-planning-freiburg"
version = "0.1.0"
authors = ["peculiarOne <wayne@campbellscorner.org.uk>"]
edition = "2018"

[dependencies]
quick-xml = "0.12.0"
failure = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.6"
env_logger = "0.6.2"

